fix issue of background moving on smaller devices when answering a question

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
     background-attachment: fixed;
     font-size: 1.2rem;
     overflow: hidden;
+    padding-bottom: 100px;
 }
 
 * {
